<resources>
    <string name="app_name">Contact Manager</string>
    <string name="sweet">SWEET</string>
    <string name="contacts">Contacts</string>
    <string name="enter_contact">Enter Contact</string>
    <string name="show_contacts">Show Contacts</string>
    <string name="remove_button_desc">remove button desc</string>
    <string name="no_contact_found">No Contact</string>
    <string name="save">Save</string>
    <string name="phone_number">Phone Number</string>
    <string name="name">Name</string>
    <string name="information">Information</string>
    <string name="contact">Contact</string>
    <string name="yes">YES</string>
</resources>